feat: add web archive generation and download functionality